<resources>
    <string name="app_name">MovieGenie</string>
    <string name="movies">MOVIES</string>
    <string name="tv">TV SHOWS</string>
    <string name="discover">DISCOVER</string>
    <string name="search">SEARCH</string>
    <string name="searchText">Search Movies/TV Shows</string>
    <string name="title_activity_main">MovieGenie</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_movies">Movies</string>
    <string name="title_activity_tvshow">TV Shows</string>

    <string-array name="Popularity">
                <item>Popularity Descending</item>
                <item>Popularity Ascending</item>

            </string-array>

        <string-array name="Year">
            <item>2015</item>
            <item>2014</item>
            <item>2013</item>
            <item>2012</item>
            <item>2011</item>
            <item>2010</item>
            <item>2009</item>
            <item>2008</item>
        </string-array>
</resources>
