<!-- A DrawerLayout is intended to be used as the top-level content view using match_parent for both width and height to consume the full space available. -->
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <!-- As the main content view, the view below consumes the entire
         space available using match_parent in both dimensions. -->
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:id="@+id/scrollView">
    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tabs">
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/grey"
                android:text="@string/movies"
                android:id="@+id/movies"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/grey"
                android:text="@string/tv"
                android:id="@+id/tvshows"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/grey"
                android:text="@string/discover"
                android:id="@+id/discover"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:padding="7dp">
            <EditText
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:background="@color/white"
                android:hint="@string/searchText"
                android:textColor="@color/black"
                android:id="@+id/search_text"/>

            <ImageButton
                android:layout_width="0dp"
                android:id="@+id/search_button"
                android:layout_height="match_parent"
                android:src="@drawable/button_image"
                android:background="@color/grey"
                android:text="@string/search"
                android:layout_weight="1"
                android:scaleType="fitCenter"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/movies_title"
            android:text="Movies"
            android:textSize="20sp"
            android:layout_margin="15dp" />

        <GridView
            android:paddingLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:id="@+id/movieGridView"
            android:numColumns="auto_fit"
            android:columnWidth="100dp"
            android:minHeight="220dp" />

        <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:paddingLeft="20dp">-->

            <!--<ImageView-->
                <!--android:layout_width="100dp"-->
                <!--android:layout_height="150dp"-->
                <!--android:id="@+id/m1"-->
                <!--android:layout_marginRight="10dp"-->
                <!--android:onClick="onClick"/>-->

            <!--<ImageView-->
                <!--android:layout_width="100dp"-->
                <!--android:layout_height="150dp"-->
                <!--android:id="@+id/m2"-->
                <!--android:layout_marginRight="10dp"-->
                <!--android:onClick="onClick"/>-->

            <!--<ImageView-->
                <!--android:layout_width="100dp"-->
                <!--android:layout_height="150dp"-->
                <!--android:id="@+id/m3"-->
                <!--android:layout_marginRight="10dp"-->
                <!--android:onClick="onClick"/>-->

        <!--</LinearLayout>-->

        <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:paddingLeft="20dp">-->

            <!--<ImageView-->
                <!--android:layout_width="100dp"-->
                <!--android:layout_height="150dp"-->
                <!--android:id="@+id/m4"-->
                <!--android:layout_marginRight="10dp"-->
                <!--android:onClick="onClick"/>-->

            <!--<ImageView-->
                <!--android:layout_width="100dp"-->
                <!--android:layout_height="150dp"-->
                <!--android:id="@+id/m5"-->
                <!--android:layout_marginRight="10dp"-->
                <!--android:onClick="onClick"/>-->

            <!--<ImageView-->
                <!--android:layout_width="100dp"-->
                <!--android:layout_height="150dp"-->
                <!--android:id="@+id/m6"-->
                <!--android:layout_marginRight="10dp"-->
                <!--android:onClick="onClick"/>-->

        <!--</LinearLayout>-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_title"
            android:text="TV Shows"
            android:textSize="20sp"
            android:layout_margin="15dp"/>

        <GridView
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:id="@+id/tvGridView"
            android:numColumns="auto_fit"
            android:paddingLeft="15dp"
            android:columnWidth="100dp"
            android:minHeight="220dp" />

        <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:paddingLeft="20dp">-->

            <!--<ImageView-->
                <!--android:layout_width="100dp"-->
                <!--android:layout_height="150dp"-->
                <!--android:id="@+id/m7"-->
                <!--android:layout_marginRight="10dp"-->
                <!--android:onClick="onClick"/>-->

            <!--<ImageView-->
                <!--android:layout_width="100dp"-->
                <!--android:layout_height="150dp"-->
                <!--android:id="@+id/m8"-->
                <!--android:layout_marginRight="10dp"-->
                <!--android:onClick="onClick"/>-->

            <!--<ImageView-->
                <!--android:layout_width="100dp"-->
                <!--android:layout_height="150dp"-->
                <!--android:id="@+id/m9"-->
                <!--android:layout_marginRight="10dp"-->
                <!--android:onClick="onClick"/>-->

        <!--</LinearLayout>-->
        <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:paddingLeft="20dp">-->

            <!--<ImageView-->
                <!--android:layout_width="100dp"-->
                <!--android:layout_height="150dp"-->
                <!--android:id="@+id/m10"-->
                <!--android:layout_marginRight="10dp"-->
                <!--android:onClick="onClick"/>-->

            <!--<ImageView-->
                <!--android:layout_width="100dp"-->
                <!--android:layout_height="150dp"-->
                <!--android:id="@+id/m11"-->
                <!--android:layout_marginRight="10dp"-->
                <!--android:onClick="onClick"/>-->

            <!--<ImageView-->
                <!--android:layout_width="100dp"-->
                <!--android:layout_height="150dp"-->
                <!--android:id="@+id/m12"-->
                <!--android:layout_marginRight="10dp"-->
                <!--android:onClick="onClick"/>-->

        <!--</LinearLayout>-->
    </LinearLayout>
    </ScrollView>



    <!-- The drawer is given a fixed width in dp and extends the full height of
         the container. -->
    <fragment
        android:id="@+id/navigation_drawer"
        android:name="com.example.prakhargautam.moviegenie.NavigationDrawerFragment"
        android:layout_width="@dimen/navigation_drawer_width"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        tools:layout="@layout/drawer_sample" />

</android.support.v4.widget.DrawerLayout>